--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
           package="com.cvv.fanstaticapps.randomticker">
 
     <application
+        android:name=".TickerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -17,9 +18,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".TimerNotificationService"/>
-
-        <activity android:name=".AlarmActivity">
+        <activity android:name=".activities.AlarmActivity">
         </activity>
     </application>
 
