Alarm is working and the AlarmActivity is looking good

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.AlarmActivity">
-        </activity>
+        <activity android:name=".activities.AlarmActivity"/>
+        <receiver android:name=".OnAlarmReceive"/>
     </application>
 
 </manifest>
