--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,35 @@
 apply plugin: 'com.android.application'
 apply from: 'signing_config.gradle'
 
+def getGitVersionName = { ->
+    String tag = ("git describe --abbrev=0 --tags").execute().text.trim()
+    if (tag.contains('/') && tag.contains('.')) {
+        return tag.substring(tag.indexOf('/') + 1, tag.length())
+    } else {
+        throw new Exception("tag has no slashes or a period [${tag}]")
+    }
+}
+
+def parseVersionCode = { versionName ->
+    def versionCode = (int) (Double.parseDouble(versionName) * 1000)
+    println "Version name: ${versionName}  Version code: ${versionCode}"
+    return versionCode
+}
+
+ext {
+    gitVersionName = getGitVersionName()
+    gitVersionCode = parseVersionCode(gitVersionName)
+}
+
 android {
     compileSdkVersion 26
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.cvv.fanstaticapps.randomticker"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 26
-        versionCode 1
-        versionName "0.1"
+        versionCode gitVersionCode
+        versionName gitVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
