Cancel in the notification working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.AlarmActivity"
             android:launchMode="singleTask"/>
 
         <receiver android:name=".OnAlarmReceive"/>
+
+        <activity android:name=".activities.CancelActivity">
+        </activity>
     </application>
 
 </manifest>
