--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.AlarmActivity"
+            android:name=".activities.KlaxonActivity"
             android:launchMode="singleTask"/>
 
         <receiver android:name=".OnAlarmReceive"/>
