Refactoring main activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
-    implementation 'com.shawnlin:number-picker:2.4.4'
+    implementation 'com.github.travijuu:numberpicker:1.0.7'
     implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:1.0.8'
     implementation 'com.github.stephanenicolas.toothpick:smoothie:1.0.8'
     implementation 'com.github.kobakei.grenade:library:1.1.0'
