--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,13 +52,16 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    provided 'org.xelevra.libs:prefdata-annotations:2.2'
+
     annotationProcessor 'org.xelevra.libs:prefdata-processor:2.2'
     annotationProcessor 'com.github.kobakei.grenade:processor:1.1.0'
     annotationProcessor 'com.github.stephanenicolas.toothpick:toothpick-compiler:1.0.8'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
-    implementation 'com.github.travijuu:numberpicker:1.0.7'
+    implementation 'com.michaelmuenzer.android:ScrollableNumberPicker:0.2.2'
     implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:1.0.8'
     implementation 'com.github.stephanenicolas.toothpick:smoothie:1.0.8'
     implementation 'com.github.kobakei.grenade:library:1.1.0'
@@ -66,6 +69,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.github.tarek360.RichPath:animator:0.0.9'
-    provided 'org.xelevra.libs:prefdata-annotations:2.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
