--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-beta6'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.cookpad.android.licensetools:license-tools-plugin:0.23.0'
     }
 }
 
