--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ ext {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.cvv.fanstaticapps.randomticker"
         minSdkVersion 21
