Added a bit more logic to creating the version so that we can have a bit more wiggle room with the decimals

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,12 @@ def getGitVersionName = { ->
     }
 }
 
-def parseVersionCode = { versionName ->
-    def versionCode = (int) (Double.parseDouble(versionName) * 1000)
+def parseVersionCode = {
+    String versionName = gitVersionName
+    def versionCodeParts = versionName.tokenize('.')
+    int decimals = Integer.parseInt(versionCodeParts.get(1))
+    String formattedVersionCode = String.format("%s%02d00", versionCodeParts.get(0), decimals)
+    def versionCode = Integer.parseInt(formattedVersionCode)
     println "Version name: ${versionName}  Version code: ${versionCode}"
     return versionCode
 }
