--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,10 +60,11 @@ android {
 	}
 }
 
-def daggerVersion = '2.11'
+def daggerVersion = '2.13'
 
 dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation 'androidx.core:core-ktx:1.0.0-alpha1'
 	implementation 'com.google.android.material:material:1.0.0-alpha1'
 	implementation 'androidx.cardview:cardview:1.0.0-alpha1'
 	implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
@@ -80,6 +81,8 @@ dependencies {
 	testImplementation 'org.mockito:mockito-core:2.13.0'
 	testImplementation 'junit:junit:4.12'
 	testImplementation 'org.robolectric:robolectric:3.6.1'
+
 	androidTestImplementation 'androidx.test.uiautomator:uiautomator-v18:2.2.0-alpha1'
+	androidTestImplementation 'androidx.test:rules:1.1.0-alpha3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
 }
