--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 	}
 	buildTypes {
 		release {
-			minifyEnabled false
+			minifyEnabled true
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 			signingConfig signingConfigs.release
 		}
@@ -67,14 +67,12 @@ dependencies {
 	implementation 'androidx.core:core-ktx:1.0.0-alpha1'
 	implementation 'com.google.android.material:material:1.0.0-alpha1'
 	implementation 'androidx.cardview:cardview:1.0.0-alpha1'
-	implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
 	implementation 'pl.bclogic:pulsator4droid:1.0.3'
 	implementation 'com.github.kobakei.grenade:library:1.1.0'
-	implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
-	implementation 'org.xelevra.libs:prefdata-annotations:2.2'
 	implementation "com.google.dagger:dagger:$daggerVersion"
 	implementation "com.google.dagger:dagger-android:$daggerVersion"
 	implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+
 	kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 	kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
 	kapt 'com.github.kobakei.grenade:processor:1.1.0'
