--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,15 +38,15 @@ kapt {
 }
 
 android {
-	compileSdkVersion 'android-P'
-	buildToolsVersion '28.0.0 rc2'
+	compileSdkVersion 27
+	buildToolsVersion '27.0.3'
 	defaultConfig {
 		applicationId "com.cvv.fanstaticapps.randomticker"
 		minSdkVersion 21
 		targetSdkVersion 27
 		versionCode gitVersionCode
 		versionName gitVersionName
-		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 	buildTypes {
 		release {
@@ -64,12 +64,14 @@ android {
 }
 
 def daggerVersion = '2.13'
+def androidSupportVersion = '27.1.1'
 
 dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	implementation 'androidx.core:core-ktx:1.0.0-alpha1'
-	implementation 'com.google.android.material:material:1.0.0-alpha1'
-	implementation 'androidx.cardview:cardview:1.0.0-alpha1'
+	implementation "com.android.support:design:${androidSupportVersion}"
+	implementation "com.android.support:cardview-v7:${androidSupportVersion}"
+	implementation "com.android.support:support-v4:${androidSupportVersion}"
+	implementation "com.android.support:appcompat-v7:27.1.1"
 	implementation 'pl.bclogic:pulsator4droid:1.0.3'
 	implementation 'com.github.kobakei.grenade:library:1.1.0'
 	implementation "com.google.dagger:dagger:$daggerVersion"
@@ -77,6 +79,7 @@ dependencies {
 	implementation "com.google.dagger:dagger-android-support:$daggerVersion"
 	implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
 	implementation 'com.google.firebase:firebase-crash:16.0.0'
+	implementation 'com.google.firebase:firebase-core:16.0.0'
 
 	kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 	kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
@@ -87,7 +90,7 @@ dependencies {
 	testImplementation 'org.robolectric:robolectric:3.6.1'
 	testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
 
-	androidTestImplementation 'androidx.test.uiautomator:uiautomator-v18:2.2.0-alpha1'
-	androidTestImplementation 'androidx.test:rules:1.1.0-alpha3'
-	androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+	androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+	androidTestImplementation 'com.android.support.test:rules:1.0.2'
+	androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
