--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha15'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.cookpad.android.licensetools:license-tools-plugin:1.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.triplet.gradle:play-publisher:1.2.2'
@@ -24,7 +24,6 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
-        mavenCentral()
     }
 }
 
