God please have mercy

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,5 @@
-image: uber/android-build-environment:latest
+image: runmymind/docker-android-sdk
+#image: uber/android-build-environment:latest
 
 pipelines:
   default:
