--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,35 +61,36 @@ android {
 			includeAndroidResources = true
 		}
 	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
 }
 
-def daggerVersion = '2.13'
-def androidSupportVersion = '27.1.1'
-
 dependencies {
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 	implementation "com.android.support:design:${androidSupportVersion}"
 	implementation "com.android.support:cardview-v7:${androidSupportVersion}"
 	implementation "com.android.support:support-v4:${androidSupportVersion}"
-	implementation "com.android.support:appcompat-v7:27.1.1"
+	implementation 'com.android.support:appcompat-v7:27.1.1'
 	implementation 'pl.bclogic:pulsator4droid:1.0.3'
 	implementation 'com.github.kobakei.grenade:library:1.1.0'
 	implementation "com.google.dagger:dagger:$daggerVersion"
 	implementation "com.google.dagger:dagger-android:$daggerVersion"
 	implementation "com.google.dagger:dagger-android-support:$daggerVersion"
-	implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
-	implementation 'com.google.firebase:firebase-crash:16.0.0'
-	implementation 'com.google.firebase:firebase-core:16.0.0'
+	implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
+	implementation 'com.google.firebase:firebase-crash:16.0.1'
+	implementation 'com.google.firebase:firebase-core:16.0.1'
 	implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 
 	kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 	kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
 	kapt 'com.github.kobakei.grenade:processor:1.1.0'
 
-	testImplementation 'org.mockito:mockito-core:2.13.0'
+	testImplementation 'org.mockito:mockito-core:2.19.0'
 	testImplementation 'junit:junit:4.12'
-	testImplementation 'org.robolectric:robolectric:3.6.1'
-	testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
+	testImplementation 'org.robolectric:robolectric:3.8'
+	testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
 
 	androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
 	androidTestImplementation 'com.android.support.test:rules:1.0.2'
