--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,34 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.2.41'
-    repositories {
-        google()
-        jcenter()
-        maven { url 'https://maven.fabric.io/public' }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath 'com.cookpad.android.licensetools:license-tools-plugin:1.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.triplet.gradle:play-publisher:1.2.2'
-        classpath 'io.fabric.tools:gradle:1.25.4'
-        classpath 'com.google.gms:google-services:4.0.1'
-    }
+
+	ext {
+		kotlinVersion = '1.2.50'
+		daggerVersion = '2.16'
+		androidSupportVersion = '27.1.1'
+	}
+	repositories {
+		google()
+		jcenter()
+		maven { url 'https://maven.fabric.io/public' }
+	}
+	dependencies {
+		classpath 'com.android.tools.build:gradle:3.1.3'
+		classpath 'com.cookpad.android.licensetools:license-tools-plugin:1.3.0'
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+		classpath 'com.github.triplet.gradle:play-publisher:1.2.2'
+		classpath 'io.fabric.tools:gradle:1.25.4'
+		classpath 'com.google.gms:google-services:4.0.1'
+	}
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-        maven { url "https://jitpack.io" }
-    }
+	repositories {
+		google()
+		jcenter()
+		maven { url "https://jitpack.io" }
+	}
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+	delete rootProject.buildDir
 }
