--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 		kotlinVersion = '1.2.50'
 		daggerVersion = '2.16'
 		androidSupportVersion = '27.1.1'
+		roomVersion = '1.1.1'
 	}
 	repositories {
 		google()
