--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.oss.licenses.plugin'
 apply plugin: 'com.github.triplet.play'
-apply plugin: 'com.cookpad.android.licensetools'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
-apply plugin: 'com.google.gms.google-services'
 
 apply from: 'release_config.gradle'
 
@@ -85,6 +84,7 @@ dependencies {
 	implementation "android.arch.persistence.room:runtime:$roomVersion"
 	implementation "android.arch.persistence.room:rxjava2:$roomVersion"
 	implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+	implementation 'com.google.android.gms:play-services-oss-licenses:15.0.1'
 
 	kapt "android.arch.persistence.room:compiler:$roomVersion"
 	kapt "com.google.dagger:dagger-compiler:$daggerVersion"
@@ -100,3 +100,6 @@ dependencies {
 	androidTestImplementation 'com.android.support.test:rules:1.0.2'
 	androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
