--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,11 @@ buildscript {
 	}
 	dependencies {
 		classpath 'com.android.tools.build:gradle:3.1.3'
-		classpath 'com.cookpad.android.licensetools:license-tools-plugin:1.3.0'
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 		classpath 'com.github.triplet.gradle:play-publisher:1.2.2'
 		classpath 'io.fabric.tools:gradle:1.25.4'
 		classpath 'com.google.gms:google-services:4.0.1'
+		classpath "com.google.gms:oss-licenses:0.9.2"
 	}
 }
 
