--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,56 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.cvv.fanstaticapps.randomticker">
+		  package="com.cvv.fanstaticapps.randomticker.app">
 
 	<application
-			android:name=".TickerApplication"
 			android:allowBackup="true"
-			android:icon="@mipmap/ic_launcher"
 			android:label="@string/app_name"
+			android:icon="@mipmap/ic_launcher"
 			android:roundIcon="@mipmap/ic_launcher_round"
 			android:supportsRtl="true"
-			android:theme="@style/AppTheme">
-		<activity android:name=".activities.MainActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
-		<activity
-				android:name=".activities.KlaxonActivity"
-				android:launchMode="singleTask"/>
-
-		<receiver android:name=".receiver.OnAlarmReceiver"/>
-
-		<activity android:name=".activities.CancelActivity"/>
-		<activity
-				android:name=".activities.SettingsActivity"
-				android:label="@string/title_activity_settings"
-				android:parentActivityName=".activities.MainActivity">
-			<meta-data
-					android:name="android.support.PARENT_ACTIVITY"
-					android:value="com.cvv.fanstaticapps.randomticker.activities.MainActivity"/>
-		</activity>
-
-
-		<!-- Google Activities, need to be here because of styling -->
-		<activity
-				android:theme="@style/AppTheme.LicenseActivity"
-				android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
-				android:parentActivityName="com.google.android.gms.oss.licenses.OssLicensesMenuActivity">
-			<meta-data
-					android:name="android.support.PARENT_ACTIVITY"
-					android:value="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"/>
-		</activity>
-		<activity
-				android:theme="@style/AppTheme.LicenseActivity"
-				android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
-				android:parentActivityName=".activities.SettingsActivity">
-			<meta-data
-					android:name="android.support.PARENT_ACTIVITY"
-					android:value="com.cvv.fanstaticapps.randomticker.activities.SettingsActivity"/>
-		</activity>
-	</application>
-
+			android:theme="@style/AppTheme"/>
 </manifest>
