--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@
 buildscript {
 
 	ext {
+		buildTools = '27.0.3'
+		minSdk = 21
+		maxSdk = 27
+
 		kotlinVersion = '1.2.50'
 		daggerVersion = '2.16'
 		androidSupportVersion = '27.1.1'
