Added path config

--- a/base-feature/src/main/AndroidManifest.xml
+++ b/base-feature/src/main/AndroidManifest.xml
@@ -5,17 +5,32 @@
 	<application
 			android:name=".TickerApplication"
 			android:allowBackup="true"
-			android:icon="@mipmap/ic_launcher"
 			android:label="@string/app_name"
-			android:roundIcon="@mipmap/ic_launcher_round"
 			android:supportsRtl="true"
-			android:theme="@style/AppTheme">
+			android:theme="@style/AppTheme"
+			android:icon="@mipmap/ic_launcher">
 		<activity android:name=".activities.MainActivity">
+			<intent-filter android:autoVerify="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"/>
+
+				<category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+
+				<data
+						android:scheme="https"
+						android:host="randomticker-84c18.firebaseapp.com"
+						android:pathPrefix="/index"/>
+			</intent-filter>
+
+			<meta-data
+					android:name="default-url"
+					android:value="randomticker-84c18.firebaseapp.com/welcome"/>
 		</activity>
 		<activity
 				android:name=".activities.KlaxonActivity"
