--- a/base-feature/src/main/AndroidManifest.xml
+++ b/base-feature/src/main/AndroidManifest.xml
@@ -10,13 +10,12 @@
 			android:theme="@style/AppTheme"
 			android:icon="@mipmap/ic_launcher">
 		<activity android:name=".activities.MainActivity">
-			<intent-filter android:autoVerify="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
-			<intent-filter>
+			<intent-filter android:autoVerify="true">
 				<action android:name="android.intent.action.VIEW"/>
 
 				<category android:name="android.intent.category.DEFAULT"/>
@@ -30,7 +29,7 @@
 
 			<meta-data
 					android:name="default-url"
-					android:value="randomticker-84c18.firebaseapp.com/welcome"/>
+					android:value="randomticker-84c18.firebaseapp.com/index"/>
 		</activity>
 		<activity
 				android:name=".activities.KlaxonActivity"
