--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,12 @@ buildscript {
 		maven { url 'https://maven.fabric.io/public' }
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:3.1.3'
-		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+		classpath 'com.android.tools.build:gradle:3.2.0-beta02'
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
 		classpath 'com.github.triplet.gradle:play-publisher:1.2.2'
 		classpath 'io.fabric.tools:gradle:1.25.4'
-		classpath 'com.google.gms:google-services:4.0.1'
-		classpath "com.google.gms:oss-licenses:0.9.2"
+		classpath "com.google.gms:google-services:${Gms.services_plugin_version}"
+		classpath "com.google.gms:oss-licenses:${Gms.oss_plugin_version}"
 	}
 }
 
