--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		  package="com.cvv.fanstaticapps.randomticker">
 
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+
 	<application
 			android:name=".TickerApplication"
 			android:allowBackup="true"
@@ -30,6 +32,8 @@
 		</activity>
 		<activity
 				android:name=".activities.KlaxonActivity"
+				android:showOnLockScreen="true"
+				android:turnScreenOn="true"
 				android:launchMode="singleTask"/>
 
 		<receiver android:name=".receiver.OnAlarmReceiver"/>
