--- a/app/release_config.gradle
+++ b/app/release_config.gradle
@@ -16,6 +16,6 @@ play {
 	if(file("play_store_secret.json").exists()){
 		println "Found play store upload credentials"
 		jsonFile = file('play_store_secret.json')
-		track = 'alpha'
+		track = 'internal'
 	}
 }
