--- a/instantapp/build.gradle
+++ b/instantapp/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.instantapp'
 
+apply from: "$rootDir/release_config.gradle"
+
 dependencies {
 	implementation project(':base')
 }
