--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ def parseVersionCode = {
 }
 
 ext {
-	runner = 4
+	runner = 5
 	gitVersionName = getGitVersionName()
 	gitVersionCode = parseVersionCode(gitVersionName)
 }
@@ -43,16 +43,16 @@ android {
 
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-		buildConfigField "boolean", "SHOW_SETTINGS", "true"
+		resValue "bool", "show_settings_menu", "true"
 	}
 }
 
-dependencies{
+dependencies {
 	implementation project(':base')
 }
 
 play {
-	if(file("play_store_secret.json").exists()){
+	if (file("play_store_secret.json").exists()) {
 		println "Found play store upload credentials"
 		jsonFile = file('play_store_secret.json')
 		track = 'internal'
