--- a/random-ticker-app/src/main/AndroidManifest.xml
+++ b/random-ticker-app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.fanstaticapps.randomticke.appr">
+		  package="com.fanstaticapps.randomticke">
 
 	<application
 			android:allowBackup="true"
