--- a/random-ticker-base/src/main/AndroidManifest.xml
+++ b/random-ticker-base/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.fanstaticapps.randomticker">
+		  package="com.fanstaticapps.randomticker.base">
 
 	<application
 			android:name="com.fanstaticapps.randomticker.TickerApplication"
